# VentureX

./: .gitignore  Dockerfile  README.md  app.py  backend_llm.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_verify.py  venturex_env.py
graders/: __init__.py  grader_downturn.py  grader_expansion.py  grader_profit.py  grader_startup.py
server/: app.py
src/: __init__.py  company.py  constants.py  economy.py  environment.py  models.py  scenarios.py  startup.py  timeline.py
tasks/: __init__.py
