[project]
name = "venturex"
version = "0.1.0"
description = "AI-powered business simulation platform with multiplayer, analytics, and startup ecosystem"
authors = [
    { name = "PASAM NUTAN" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    # Core Backend
    "flask>=2.3.0",
    "flask-cors>=4.0.0",

    # AI Integration
    "openai>=1.0.0",

    # Real-time (WebSockets)
    "flask-socketio>=5.3.0",
    "eventlet>=0.33.0",

    # Database (for companies, users, multiplayer)
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",   # PostgreSQL

    # Data & Analytics
    "pandas>=2.0.0",

    # Auth & Security
    "python-dotenv>=1.0.0",

    # API & Serialization
    "marshmallow>=3.20.0",

    # Async tasks (for simulation engine, scenarios)
    "celery>=5.3.0",
    "redis>=5.0.0"
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["."]